Sukkiri Java 20240208 new commit
Sukkiri Java(Eclipse perfect Guide) 20240208 new commit

--- a/JavaServlet(20240204)/SukkiriJava(20240205~)/.classpath
+++ b/JavaServlet(20240204)/SukkiriJava(20240205~)/.classpath
@@ -6,5 +6,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="20240206Before"/>
+	<classpathentry kind="src" path="20240206-10:40"/>
+	<classpathentry kind="src" path="20240207-11:07"/>
+	<classpathentry kind="src" path="20240207-14:20"/>
+	<classpathentry kind="src" path="20240208-10:06"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
